Improved workbook markdown descriptions

--- a/Linear_Regression_Project/linear_regression_housing_analysis.ipynb
+++ b/Linear_Regression_Project/linear_regression_housing_analysis.ipynb
@@ -21,11 +21,11 @@
    "source": [
     "## About the Dataset\n",
     "\n",
-    "The Ames housing data set was collected in 2011 and contains information about home sales in Ames, Iowa, including the sale price and numerical and categorical information about each home. We have constructed a \"reduced\" version of the dataset that is available at:\n",
+    "The Ames housing data set was collected in 2011 and contains information about home sales in Ames, Iowa, including the sale price and numerical and categorical information about each home. A \"reduced\" version of the dataset that is available at:\n",
     "\n",
     "https://www.chrismusco.com/machinelearning2024_grad/AmesHousing.csv.\n",
     "\n",
-    "More information about the meaning of each column can be found here: https://cran.r-project.org/web/packages/AmesHousing/AmesHousing.pdf. Note that our version of the dataset contains a subset of the columns in the original dataset and the last column, SalesPrice, is in units of 1000s of US dollars in our version.\n"
+    "More information about the meaning of each column can be found here: https://cran.r-project.org/web/packages/AmesHousing/AmesHousing.pdf. Note that this reduced version of the dataset contains a subset of the columns in the original dataset and the last column, SalesPrice, is in units of 1000s of US dollars in this version.\n"
    ]
   },
   {
@@ -536,7 +536,7 @@
    "source": [
     "## Part 3:  Comparing Different Dependent Variables\n",
     "\n",
-    "We next compute the squared loss for all the predictors and output the values in a table, so we can determine what predictor variables do the best job predicting house price?"
+    "Next the squared loss for all the predictors and output the values are computed, so the predictor variables that do the best job predicting house price (the ones with the lowest aggregate loss value) can be determined."
    ]
   },
   {
@@ -616,13 +616,13 @@
     "\n",
     "Instead of the closed form expressions for the optimal $\\beta_0$ and $\\beta_1$ used in `fit_linear` above, a brute force approach is implemented below to find the approximate minimized loss by searching over a grid of possible values for $\\beta_0$ and $\\beta_1$.\n",
     "\n",
-    "We search over the range [-50, 50] for $\\beta_0$ in increments of 0.1.\n",
-    "We search over the range [-1, 1] for $\\beta_1$ in increments of 0.005."
+    "For $\\beta_0$, the range [-50, 50] is searched over in increments of 0.1.\n",
+    "For $\\beta_1$, the range [-1, 1] is searched over in increments of 0.005."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {
     "id": "xM5-ccw382YZ"
    },
@@ -733,7 +733,7 @@
    "source": [
     "### Extending to Different Loss Functions: L1 Loss and L-infinity Loss\n",
     "\n",
-    "Below we implement different functions to minimize the following loss functios:\n",
+    "Below, three different functions are implemented to minimize the following loss functios:\n",
     "* the $\\ell_1$ (least absolute deviations) loss: $\\sum_{i=1}^n |y_i - \\beta_0 - \\beta_1 x_i|$\n",
     "* the $\\ell_\\infty$ (max) loss: $\\max_i |y_i - \\beta_0 - \\beta_1 x_i|$\n"
    ]
@@ -866,16 +866,14 @@
     "id": "hhhh3qmec83V"
    },
    "source": [
-    "**TODO:** Repeat the process above for the `Lot Area` predictor variable, which has some more extreme outliers. Note that  this variable has a different scale than `Gr Liv Area` so you might need to adjust your approximate fit functions accordingly.\n",
+    "Below 3 different linear fits are computed for `SalePrice` with predictor variable `Lot Area`, one for squared loss, one for $\\ell_1$ loss, and one for $\\ell_\\infty$ loss. Resulting regression lines are then plotted.\n",
     "\n",
-    "Below 3 different linear fits are computed for `SalePrice` with predictor variable `Lot Area`, one for squared loss, one for $\\ell_1$ loss, and one for $\\ell_\\infty$ loss. Resulting regression lines are then plotted\n",
-    "\n",
-    "Again produce a plot that contains three different linear fits for all three different loss functions. Write 1-2 sentences of discussion about "
+    "Note, the `Lot Area` predictor variable has some extreme outliers, meaning there will be greater variability in the regression lines from different loss functions and the regression lines from loss functions (e.g. Loss-Infinity) will be significantly influenced by these outliers."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {
     "id": "2n5OBKZ_1PiF"
    },
