Making updates to the n-gram text generator notebook to improve project documentation.

--- a/Autoregressive_n-Gram_Text_Generator/autoregressive_markov_n-gram_text_enerator.ipynb
+++ b/Autoregressive_n-Gram_Text_Generator/autoregressive_markov_n-gram_text_enerator.ipynb
@@ -7,26 +7,26 @@
     "id": "b4c6ed96"
    },
    "source": [
-    "# Lab 3: Generating Text with an Autoregressive Model\n",
+    "# Autoregressive Text Generator using N-gram Markov Chains\n",
     "\n",
-    "In this lab, we will build a simple model for generating text in the style of a given book. In lecture, we learned about **probabalistic models**, which views the data given as the result of some random process. In this lab, we will be using this probablistic assumption to **generate new data**. Specifically, we will use an autoregressive model, as discussed in Lecture 4. Our model will begin with a list of words, and generate a new word based on the $k$ most recent previous words. $k$ is chosen to be a small fixed constant, which limits the complexity of the model.\n",
+    "This project develops a sophisticated Markov model for generating text in the style of given literary works. The core innovation lies in implementing **probabilistic models** that view text data as the result of a structured random process. By leveraging autoregressive modeling principles, the system generates new words based on the $k$ most recent previous words, where $k$ represents the model order and determines the complexity of linguistic dependencies captured.\n",
     "\n",
-    "Sometimes this type of model is also called a Markov Model. Similar techniques can be used for time-series and really any other data that has some notion of _recency_. For example, our Lab 2 studied an auto-regressive model for time series data. Even fancy modern language models like the GPT family of models are auto-regressive.\n",
+    "This approach implements what's formally known as a **Markov Model**, where the probability of the next word depends only on the current context window. While this technique has applications in time-series analysis and sequential data modeling, its primary application here is in natural language generation - the same foundational principle that powers modern AI language models like the GPT family.\n",
     "\n",
-    "We get our input data from [Project Gutenberg](https://www.gutenberg.org/), a free library of public-works books made available online. By default, we include four books in this lab:\n",
+    "The project utilizes [Project Gutenberg](https://www.gutenberg.org/), a comprehensive library of public domain literary works. The analysis focuses on four diverse literary texts to demonstrate the model's versatility across different writing styles:\n",
     "- _Alice in Wonderland_ by Lewis Carroll\n",
     "- _Metamorphosis_ by Franz Kafka\n",
     "- _The Count of Monte Cristo_ by Alexandre Dumas\n",
     "- _The Complete Works of William Shakespeare_ by William Shakespeare\n",
     "\n",
-    "You will be able to add or change these book as you please, and there is code to make this relatively seamless. Pick your favorite work on the site!\n",
+    "The modular design allows seamless integration of additional texts, enabling exploration of how different literary styles influence generation quality and creativity.\n",
     "\n",
     "---\n",
     "\n",
     "The goals of this lab are to:\n",
-    "- Get some experience preprocessing data\n",
-    "- Train and generate text with an autoregressive model\n",
-    "- Understand the quality/plagiarism tradeoff that comes with increasing the complexity of the autoregressive model\n",
+    "- **Text Preprocessing Pipeline**: Development of robust data cleaning and tokenization methods for literary texts\n",
+    "- **Model Architecture**: Implementation and optimization of n-gram Markov Chain models\n",
+    "- **Quality Assessment**: Quantitative analysis of the creativity vs. coherence trade-off as model complexity (n-gram context window length) increases \n",
     "- Get some experience building experiments that teach us about our models\n"
    ]
   },
